--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body {
   --social-media-color: #afb1b8;
   --section-team-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  --animation-cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 img {
@@ -85,6 +86,7 @@ header {
 /* ----------------WEB STUDIO--------------- */
 
 /* ----------------HEADER--------------- */
+
 .container.header {
   display: flex;
   justify-content: space-between;
@@ -130,6 +132,7 @@ header {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  transition: color 250ms var(--animation-cubic);
 }
 
 .site-nav .link:hover,
@@ -138,6 +141,19 @@ header {
 }
 .link.current-btn {
   color: var(--accent-color);
+}
+.site-nav .item {
+  position: relative;
+}
+.link.current-btn::after {
+  content: "";
+  bottom: -1px;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  background-color: var(--button-bkg-color);
+  border-radius: 2px;
 }
 
 /* ----------------HEADER CONTACTS--------------- */
@@ -161,6 +177,7 @@ header {
   padding-bottom: 32px;
   display: flex;
   align-items: center;
+  transition: color 250ms var(--animation-cubic);
 }
 .icon-contacts {
   fill: currentColor;
@@ -207,6 +224,7 @@ header {
   color: var(--hero-title-color);
   background-color: var(--accent-color);
   padding: 10px 32px;
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -214,12 +232,74 @@ header {
   letter-spacing: 0.06em;
   cursor: pointer;
   border: none;
+
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+
+  transition: background-color 250ms var(--animation-cubic),
+    box-shadow 250ms var(--animation-cubic);
 }
 .hero-button:hover,
 .hero-button:focus {
   background-color: #188ce8;
+}
+
+/* -------------MODAL WINDOW------------ */
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms var(--animation-cubic);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+
+  display: flex;
+
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-button {
+  width: 30px;
+  height: 30px;
+  margin-left: auto;
+  margin-right: 8px;
+  margin-top: 8px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  color: #000000;
+
+  transition: background-color 550ms var(--animation-cubic),
+    color 250ms var(--animation-cubic);
+}
+.modal-icon {
+  fill: currentColor;
+}
+
+.modal-button:hover,
+.modal-button:focus {
+  background-color: var(--button-bkg-color);
+  color: #fff;
 }
 
 /* ----------------BENEFITS--------------- */
@@ -277,6 +357,28 @@ header {
 }
 .list-works .item:first-child {
   margin-left: 0;
+}
+.works-thumb {
+  position: relative;
+}
+.works-text {
+  position: absolute;
+  bottom: 0;
+  height: 70px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #ffffff;
+  background-color: rgba(47, 48, 58, 0.8);
 }
 
 /* ----------------TEAM--------------- */
@@ -338,6 +440,9 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  transition: color 250ms var(--animation-cubic),
+    background-color 250ms var(--animation-cubic);
 }
 .team-soc-media .item-soc {
   margin-right: 10px;
@@ -372,6 +477,9 @@ header {
   align-items: center;
   justify-content: center;
   color: var(--social-media-color);
+
+  transition: color 250ms var(--animation-cubic),
+    background-color 250ms var(--animation-cubic);
 }
 .icon-clients {
   fill: currentColor;
@@ -411,11 +519,14 @@ header {
 .address .location {
   display: block;
   color: var(--hero-title-color);
+
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   text-decoration: none;
   margin-bottom: 9px;
+
+  transition: color 250ms var(--animation-cubic);
 }
 .address .location:hover,
 .address .location:focus {
@@ -426,6 +537,8 @@ header {
   line-height: 1.71;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
+
+  transition: color 250ms var(--animation-cubic);
 }
 .contacts.mail {
   margin-bottom: 9px;
@@ -469,6 +582,8 @@ header {
   justify-content: center;
   align-items: center;
   color: #fff;
+
+  transition: background-color 250ms var(--animation-cubic);
 }
 .footer-list .icon-social {
   fill: currentColor;
@@ -502,6 +617,10 @@ header {
   cursor: pointer;
   border: none;
   border-radius: 4px;
+
+  transition: box-shadow 250ms var(--animation-cubic),
+    background-color 250ms var(--animation-cubic),
+    color 250ms var(--animation-cubic);
 }
 .filter-button.current {
   color: var(--hero-title-color);
@@ -534,7 +653,6 @@ header {
   margin-right: 30px;
   margin-bottom: 30px;
 }
-
 .projects .content {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
@@ -543,7 +661,7 @@ header {
 
 .projects .title {
   color: var(--basic-color);
-  font-weight: bold;
+  font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
@@ -555,11 +673,45 @@ header {
   font-size: 16px;
   line-height: 1.88;
 }
-/* .projects .decoration {
-  display: block;
-} */
+
 .projects .decoration:hover,
 .projects .decoration:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+/* -----------------POP-UP TEXT-------------- */
+
+.thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.actions {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 63px 24px;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  opacity: 0;
+  transition: opacity 250ms var(--animation-cubic),
+    transform 250ms var(--animation-cubic);
+  transform: translateY(100%);
+}
+.decoration:hover .actions {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.actions-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  color: #ffffff;
 }
